knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/LeadScoreCardbyAccount__c.object-meta.xml
<CustomObject>
    <label>LeadScoreCardbyAccount</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>LeadScoreCardbyAccount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadScoreCardbyAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>