knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/Account_DHCID__c.field-meta.xml
<CustomField>
    <fullName>Account_DHCID__c</fullName>
    <formula>AccountLeadScoreCard__r.Definitive_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DHCID</label>
    <type>Text</type>
</CustomField>