knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/AccountLeadScoreCard__c.field-meta.xml
<CustomField>
    <fullName>AccountLeadScoreCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountLeadScoreCard</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LeadScoreCardbyAccounts</relationshipLabel>
    <relationshipName>LeadScoreCardbyAccounts1</relationshipName>
    <type>Lookup</type>
</CustomField>