knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/Hospital_ID__c.field-meta.xml
<CustomField>
    <fullName>Hospital_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hospital ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>