knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>