knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/ScoreCardMatrix__c.field-meta.xml
<CustomField>
    <fullName>ScoreCardMatrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ScoreCardMatrix</label>
    <referenceTo>ScoreCardMatrix__c</referenceTo>
    <relationshipLabel>LeadScoreCardbyAccounts</relationshipLabel>
    <relationshipName>LeadScoreCardbyAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>