knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>