knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/LeadScoreCardbyAccount__c/fields/Weighted_Score2__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score2__c</fullName>
    <formula>CASE( (ScoreCardMatrix__r.Criteria_Fields__c),
&quot;ED Volume&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Phy in State (EM, FP, or IM)&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Hospital Service Area HH Inco&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Population Size of Svc Area&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Ownership/Geography&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;CBSA Classification&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Proximity to SG ED Client&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Managed Care Favorability&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;SG Favorability&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Net Operating Profit Margin&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
&quot;Staffed Beds&quot;, ScoreCardMatrix__r.WEIGHTED_CONSTANTS_C__c * Score__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>